--- a/drivers/crypto/marvell/Kconfig
+++ b/drivers/crypto/marvell/Kconfig
@@ -55,6 +55,8 @@ config CRYPTO_DEV_OCTEONTX2_CPT
 	select CRYPTO_ECDH
 	select CRYPTO_DH
 	select CRYPTO_AUTHENC
+	select CRYPTO_DES
+	select CRYPTO_ECB
 	select NET_DEVLINK
 	help
 		This driver allows you to utilize the Marvell Cryptographic
